2010-02-16  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: dup the values coming in from the object tag, chrome
	throws them away immediately

2010-02-13  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: add an instance flag that helps us decide
	if we should attempt normal startup or try to avoid reentering at
	all calls in CreateWindow.

	Works aroud the hang when trying to load moonlight in chromium
	without breaking the firefox startup sequence.

2010-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp|h: Do no call IS_NOTIFY* a second time if the first
	call was successful as the pointer may not be valid anymore

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp|h: The default value for AllowHtmlPopupWindow is
	different for same-domain applications (true) and cross-domain
	applications (false) unless it is specifically specified.

2010-02-03  Andreia Gaita  <avidigal@novell.com>

	* cbinding.cpp, cbinding.h, plugin-class.g.cpp,
	plugin-class.h:  remove autogenerated files from the repo, as
	part of making the generator step automatic

2010-01-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: PluginInstance::LoadXAML: Make sure we call
	RemoveCleanupPointer on every exit path.

2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* plugin-class.[h.in|cpp]: Use plugin code for
	HtmlObject(Attach|Detach)Event instead of bridge calls

	* plugin-domevents.[h|cpp]: NPAPI implementation
	  of DOM Event listeners, to replace the gecko-specific
	  bridge code

	* plugin.[h|cpp]: Add FF3.6 bridge. Replace bridge calls
	  for HtmlObject(Attach|Detach)Event with NPAPI implementations

	* browser-bridge.h: removed DOM code, replaced by
	  plugin-domevents.*

	* plugin-class.h: regenerated

2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: value_to_variant: add a ref to the NPObject, so
	that the caller can call NPN_RelaseVariantObject on the returned